--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v4)</title>
+  <title>Michael Schimkus - Portfolio (v4.1)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -12,7 +12,6 @@
       --color-primary-dark: #9dcee9;
       --color-white:        #ffffff;
       --color-text:         #222222;
-      --color-border:       #b0b0b0;
       --highlight-bg:       rgba(157,206,233,0.35);
       --border-radius:      10px;
       --max-width:          1200px;
@@ -45,10 +44,10 @@
     header h1 {
       font-size: 2.2rem;
       font-weight: 600;
-      text-shadow: 0 0 1px var(--color-border);
+      text-shadow: 0 0 1px rgba(176,176,176,0.7);
     }
 
-    /* Sticky nav within container */
+    /* Nav styling without sticky behavior */
     .container nav {
       display: flex;
       justify-content: center;
@@ -58,6 +57,7 @@
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       padding: 0.2rem 0;
       margin-bottom: 1rem;
+      z-index: 100;
     }
     nav a {
       color: var(--color-text);
@@ -86,16 +86,10 @@
       background: var(--color-white);
       padding: 1.5rem;
       border-radius: var(--border-radius);
-      /* border removed in version 3.2 */
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       margin-bottom: 1.5rem;
     }
 
-    .gallery {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
     .gallery-item img {
       width: 100%;
       height: 180px;
@@ -104,7 +98,11 @@
       cursor: pointer;
       border: none;
     }
-    .project-title { font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; }
+    .project-title {
+      font-size: 1rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
 
     form {
       display: flex;
@@ -138,7 +136,12 @@
       font-weight: 600;
       text-shadow: 0 0 1px var(--color-white);
     }
-    .version { text-align: center; font-size: 0.8rem; color: var(--color-text); margin-bottom: 1rem; }
+    .version {
+      text-align: center;
+      font-size: 0.8rem;
+      color: var(--color-text);
+      margin-bottom: 1rem;
+    }
 
     #lightbox {
       position: fixed;
@@ -162,7 +165,6 @@
   <div class="container">
     <header><h1>Michael Schimkus</h1></header>
   </div>
-
   <div class="container">
     <nav id="site-nav">
       <a href="#about" class="nav-link">About</a>
@@ -170,35 +172,29 @@
       <a href="#contact" class="nav-link">Contact</a>
     </nav>
   </div>
-
   <main class="container">
     <section id="about" class="card">
       <h2 class="section-title">About</h2>
       <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be. It gives visitors a brief introduction.</p>
       <p>This is a second sample paragraph for demonstration purposes. You might include hobbies, your work ethic, or what makes you unique.</p>
     </section>
-
     <section id="portfolio" class="card">
-      <h2 class="section-title">Portfolio</h2>
-      <div class="gallery">
-        <div class="gallery-item"><h3 class="project-title">Project 1</h3><img src="https://via.placeholder.com/800x500" alt="Project 1"></div>
-        <div class="gallery-item"><h3 class="project-title">Project 2</h3><img src="https://via.placeholder.com/800x500/eeeeee/333" alt="Project 2"></div>
+      <h2 class="section-title">Population Change in Communities Outside Joshua Tree National Park</h2>
+      <div class="gallery-item">
+        <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
+        <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
       </div>
     </section>
-
     <section id="contact" class="card">
       <h2 class="section-title">Contact</h2>
       <form><input type="text" placeholder="Your Name" required/><input type="email" placeholder="Your Email" required/><textarea rows="5" placeholder="Your Message" required></textarea><button type="submit">Send Message</button></form>
     </section>
   </main>
-
   <div class="container">
     <footer class="footer">&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a></footer>
-    <div class="version">version 4</div>
+    <div class="version">version 4.1</div>
   </div>
-
   <div id="lightbox"><img id="lightbox-img" src="" alt="Enlarged image"/></div>
-
   <script>
     const navLinks = document.querySelectorAll('.nav-link'); const sections = document.querySelectorAll('section');
     function setActiveLink(id) { navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href')===`#${id}`)); }
