--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v4.1)</title>
+  <title>Michael Schimkus - Portfolio (v4.2)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -179,7 +179,7 @@
       <p>This is a second sample paragraph for demonstration purposes. You might include hobbies, your work ethic, or what makes you unique.</p>
     </section>
     <section id="portfolio" class="card">
-      <h2 class="section-title">Population Change in Communities Outside Joshua Tree National Park</h2>
+      <h2 class="section-title">Portfolio</h2>
       <div class="gallery-item">
         <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
         <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
@@ -192,7 +192,7 @@
   </main>
   <div class="container">
     <footer class="footer">&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a></footer>
-    <div class="version">version 4.1</div>
+    <div class="version">version 4.2</div>
   </div>
   <div id="lightbox"><img id="lightbox-img" src="" alt="Enlarged image"/></div>
   <script>
