--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v4.3)</title>
+  <title>Michael Schimkus - Portfolio (v4.2)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -182,7 +182,7 @@
       <h2 class="section-title">Portfolio</h2>
       <div class="gallery-item">
         <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
-        <img src="https://github.com/mschimkus/michaelsc/blob/main/project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
+        <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
       </div>
     </section>
     <section id="contact" class="card">
@@ -192,7 +192,7 @@
   </main>
   <div class="container">
     <footer class="footer">&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a></footer>
-    <div class="version">version 4.3</div>
+    <div class="version">version 4.2</div>
   </div>
   <div id="lightbox"><img id="lightbox-img" src="" alt="Enlarged image"/></div>
   <script>
