--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v5.2)</title>
+  <title>Michael Schimkus - Portfolio (v5.4)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -81,7 +81,7 @@
       font-weight: 800;
       margin: 0 0 0.5rem;
       text-shadow: 0 0 1px var(--color-white);
-      text-align: center;
+      text-align: left;
     }
     .card {
       background: var(--color-white);
@@ -204,7 +204,7 @@
     <section id="portfolio" class="card">
       <h2 class="section-title">Portfolio</h2>
       <div class="gallery-item">
-        <h3 class="project-title">Portfolio</h3>
+        <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
         <img src="project1.jpg" alt="Portfolio Image">
       </div>
     </section>
@@ -220,7 +220,7 @@
   </main>
   <div class="container">
     <footer class="footer">&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a></footer>
-    <div class="version">version 5.2</div>
+    <div class="version">version 5.4</div>
   </div>
   <div id="lightbox">
     <button class="prev">&#10094;</button>
