--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v5.4)</title>
+  <title>Michael Schimkus - Portfolio (v6)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -16,13 +16,11 @@
       --border-radius:      10px;
       --max-width:          1200px;
     }
-
     *, *::before, *::after {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Public Sans', sans-serif;
       background: var(--color-primary-light);
@@ -30,13 +28,11 @@
       line-height: 1.6;
       scroll-behavior: smooth;
     }
-
     .container {
       max-width: var(--max-width);
       margin: 0 auto;
       padding: 0 1rem;
     }
-
     header {
       text-align: center;
       padding: 1rem 0 0.5rem;
@@ -46,7 +42,6 @@
       font-weight: 600;
       text-shadow: 0 0 1px rgba(176,176,176,0.7);
     }
-
     /* Nav styling without sticky behavior */
     .container nav {
       display: flex;
@@ -72,7 +67,6 @@
     }
     nav a:hover { background-color: rgba(157,206,233,0.2); }
     nav a.active { background-color: var(--highlight-bg); }
-
     main {
       padding-bottom: 1rem;
     }
@@ -82,6 +76,10 @@
       margin: 0 0 0.5rem;
       text-shadow: 0 0 1px var(--color-white);
       text-align: left;
+      background-color: var(--highlight-bg);
+      border-radius: var(--border-radius);
+      display: inline-block;
+      padding: 0.3rem 0.75rem;
     }
     .card {
       background: var(--color-white);
@@ -90,7 +88,6 @@
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       margin-bottom: 1.5rem;
     }
-
     .gallery-item {
       position: relative;
       text-align: center;
@@ -109,7 +106,6 @@
       margin: 0.5rem 0 0;
       text-align: center;
     }
-
     form {
       display: flex;
       flex-direction: column;
@@ -130,7 +126,6 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
     footer.footer {
       text-align: center;
       padding: 0.5rem;
@@ -148,7 +143,6 @@
       color: var(--color-text);
       margin-bottom: 1rem;
     }
-
     /* Lightbox */
     #lightbox {
       position: fixed;
@@ -177,7 +171,6 @@
     }
     #lightbox .prev { left: 0; }
     #lightbox .next { right: 0; }
-
     @media (max-width: 600px) {
       nav a { font-size: 1rem; padding: 0.2rem 0.8rem; }
       .section-title { font-size: 1.5rem; }
@@ -205,7 +198,7 @@
       <h2 class="section-title">Portfolio</h2>
       <div class="gallery-item">
         <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
-        <img src="project1.jpg" alt="Portfolio Image">
+        <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
       </div>
     </section>
     <section id="contact" class="card">
