--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v5.6)</title>
+  <title>Michael Schimkus - Portfolio (v5.9)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --color-primary-light: #f6fcff;
       --color-white:        #ffffff;
       --color-text:         #222222;
-      --highlight-bg:       rgba(157,206,233,0.35);
+      --highlight-bg:       rgba(255,200,150,0.35);
       --border-radius:      10px;
       --max-width:          1200px;
     }
@@ -86,7 +86,7 @@
       padding: 1.5rem;
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin-bottom: 1.5rem;
+      margin: 1.5rem 0;
     }
 
     .gallery-item {
@@ -210,7 +210,7 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v5.6
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v5.9
     </footer>
   </div>
   <div id="lightbox">
