--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v5.9)</title>
+  <title>Michael Schimkus - Portfolio (v6.1)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --color-primary-light: #f6fcff;
       --color-white:        #ffffff;
       --color-text:         #222222;
-      --highlight-bg:       rgba(255,200,150,0.35);
+      --highlight-bg:       rgba(0,123,255,0.35); /* Medium blue highlight */
       --border-radius:      10px;
       --max-width:          1200px;
     }
-
     *, *::before, *::after {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
     }
-
     body {
       font-family: 'Public Sans', sans-serif;
       background: var(--color-primary-light);
@@ -28,157 +25,35 @@
       line-height: 1.6;
       scroll-behavior: smooth;
     }
-
-    .container {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-
-    header {
-      text-align: center;
-      padding: 1rem 0 0.5rem;
-    }
-    header h1 {
-      font-size: 2.2rem;
-      font-weight: 600;
-      text-shadow: 0 0 1px rgba(176,176,176,0.7);
-    }
-
-    /* Nav styling */
-    .container nav {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      background: var(--color-white);
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      padding: 0.2rem 0;
-      margin-bottom: 1rem;
-      z-index: 100;
-    }
-    nav a {
-      color: var(--color-text);
-      padding: 0.2rem 1rem;
-      font-weight: 600;
-      font-size: 1.2rem;
-      text-decoration: none;
-      transition: background-color 0.25s ease;
-      text-shadow: 0 0 1px var(--color-white);
-      border-radius: var(--border-radius);
-      letter-spacing: 0.03em;
-    }
+    .container { max-width: var(--max-width); margin: 0 auto; padding: 0 1rem; }
+    header { text-align: center; padding: 1rem 0 0.5rem; }
+    header h1 { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
+    nav { display: flex; justify-content: center; gap: 1.5rem; background: var(--color-white); border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); padding: 0.2rem 0; margin-bottom: 1rem; z-index: 100; }
+    nav a { color: var(--color-text); padding: 0.2rem 1rem; font-weight: 600; font-size: 1.2rem; text-decoration: none; transition: background-color 0.25s ease; text-shadow: 0 0 1px var(--color-white); border-radius: var(--border-radius); letter-spacing: 0.03em; }
     nav a:hover { background-color: rgba(157,206,233,0.2); }
     nav a.active { background-color: var(--highlight-bg); }
-
-    main {
-      padding-bottom: 1rem;
-    }
-    .section-title {
-      font-size: 1.7rem;
-      font-weight: 800;
-      margin: 0 0 0.5rem;
-      text-shadow: 0 0 1px var(--color-white);
-      text-align: left;
-    }
-    .card {
-      background: var(--color-white);
-      padding: 1.5rem;
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1.5rem 0;
-    }
-
-    .gallery-item {
-      text-align: center;
-    }
-    .gallery-item img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .project-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin: 0.5rem 0 0;
-      text-align: center;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.85rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font: inherit;
-    }
-    button {
-      background: var(--color-primary-mid);
-      color: var(--color-white);
-      padding: 0.85rem;
-      border: none;
-      font-weight: 700;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    footer.footer {
-      text-align: center;
-      padding: 0.5rem;
-      background: var(--color-white);
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1rem 0;
-      font-size: 0.9rem;
-      font-weight: 600;
-      text-shadow: 0 0 1px var(--color-white);
-    }
-
+    main { padding-bottom: 1rem; }
+    .section-title { font-size: 1.7rem; font-weight: 800; margin: 0 0 0.5rem; text-shadow: 0 0 1px var(--color-white); text-align: left; }
+    .card { background: var(--color-white); padding: 1.5rem; border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1.5rem 0; }
+    .gallery-item { text-align: center; }
+    .gallery-item img { width: 100%; height: auto; object-fit: contain; border-radius: 8px; cursor: pointer; }
+    .project-title { font-size: 1rem; font-weight: 600; margin: 0.5rem 0 0; text-align: center; }
+    form { display: flex; flex-direction: column; gap: 1rem; }
+    input, textarea { padding: 0.85rem; border: 1px solid #ccc; border-radius: 8px; font: inherit; }
+    button { background: var(--color-primary-mid); color: var(--color-white); padding: 0.85rem; border: none; font-weight: 700; border-radius: 8px; cursor: pointer; }
+    footer.footer { text-align: center; padding: 0.5rem; background: var(--color-white); border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1rem 0; font-size: 0.9rem; font-weight: 600; text-shadow: 0 0 1px var(--color-white); }
     /* Lightbox */
-    #lightbox {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.9);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-    }
-    #lightbox-img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-    }
-    #lightbox .prev, #lightbox .next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 2rem;
-      color: var(--color-white);
-      background: none;
-      border: none;
-      cursor: pointer;
-      padding: 0 1rem;
-    }
+    #lightbox { position: fixed; inset: 0; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 999; }
+    #lightbox-img { max-width: 90%; max-height: 90%; border-radius: 10px; }
+    #lightbox .prev, #lightbox .next { position: absolute; top: 50%; transform: translateY(-50%); font-size: 2rem; color: var(--color-white); background: none; border: none; cursor: pointer; padding: 0 1rem; }
     #lightbox .prev { left: 0; }
     #lightbox .next { right: 0; }
-
-    @media (max-width: 600px) {
-      nav a { font-size: 1rem; padding: 0.2rem 0.8rem; }
-      .section-title { font-size: 1.5rem; }
-    }
+    @media (max-width: 600px) { nav a { font-size: 1rem; padding: 0.2rem 0.8rem; } .section-title { font-size: 1.5rem; } }
   </style>
 </head>
 <body>
   <div class="container">
     <header><h1>Michael Schimkus</h1></header>
-  </div>
-  <div class="container">
     <nav id="site-nav">
       <a href="#about" class="nav-link">About</a>
       <a href="#portfolio" class="nav-link">Portfolio</a>
@@ -210,53 +85,21 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v5.9
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v6.1
     </footer>
   </div>
-  <div id="lightbox">
-    <button class="prev">&#10094;</button>
-    <img id="lightbox-img" src="" alt="Enlarged image" />
-    <button class="next">&#10095;</button>
-  </div>
   <script>
-    const images = Array.from(document.querySelectorAll('.gallery-item img'));
-    let currentIndex = 0;
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = document.getElementById('lightbox-img');
-    const btnPrev = lightbox.querySelector('.prev');
-    const btnNext = lightbox.querySelector('.next');
-    images.forEach((img, i) => img.addEventListener('click', () => {
-      currentIndex = i;
-      showLightbox();
-    }));
-    function showLightbox() {
-      lightboxImg.src = images[currentIndex].src;
-      lightbox.style.display = 'flex';
-    }
-    btnPrev.addEventListener('click', () => {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      showLightbox();
-    });
-    btnNext.addEventListener('click', () => {
-      currentIndex = (currentIndex + 1) % images.length;
-      showLightbox();
-    });
-    lightbox.addEventListener('click', e => {
-      if (e.target === lightbox) lightbox.style.display = 'none';
-    });
     const navLinks = document.querySelectorAll('.nav-link');
     const sections = document.querySelectorAll('section');
-    function setActiveLink(id) {
-      navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href') === `#${id}`));
-    }
+    function setActiveLink(id) { navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href')===`#${id}`)); }
     function updateActiveSection() {
-      let current = '';
-      sections.forEach(sec => {
-        if (window.pageYOffset >= sec.offsetTop - document.querySelector('nav').offsetHeight) current = sec.id;
+      let current='';
+      sections.forEach(sec=>{
+        if(window.pageYOffset>=sec.offsetTop-nav.offsetHeight) current=sec.id;
       });
-      if (current) setActiveLink(current);
+      if(current) setActiveLink(current);
     }
-    window.addEventListener('scroll', updateActiveSection);
+    window.addEventListener('scroll',updateActiveSection);
     updateActiveSection();
   </script>
 </body>
