--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v6.1)</title>
+  <title>Michael Schimkus - Portfolio (v6.2)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --color-primary-light: #f6fcff;
       --color-white:        #ffffff;
       --color-text:         #222222;
-      --highlight-bg:       rgba(0,123,255,0.35); /* Medium blue highlight */
+      --highlight-bg:       rgba(0,123,255,0.5); /* Darker medium blue highlight */ /* Medium blue highlight */
       --border-radius:      10px;
       --max-width:          1200px;
     }
@@ -85,7 +85,7 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v6.1
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v6.2
     </footer>
   </div>
   <script>
