--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
     }
     nav {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
       background: var(--color-white);
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      padding: 0.5rem 0;
+      padding: 0.5rem 1rem;
       margin: 1rem 0;
-      gap: 0.5rem;
     }
     .nav-title {
       font-size: 2.2rem;
@@ -167,7 +166,7 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v6.2
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v7
     </footer>
   </div>
   <script>
