--- a/index.html
+++ b/index.html
@@ -25,109 +25,41 @@
       line-height: 1.6;
       scroll-behavior: smooth;
     }
-    .container {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
+    .container { max-width: var(--max-width); margin: 0 auto; padding: 0 1rem; }
+    /* Nav restored to stacked layout */
     nav {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
       background: var(--color-white);
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0;
       margin: 1rem 0;
+      gap: 0.5rem;
     }
-    .nav-title {
-      font-size: 2.2rem;
-      font-weight: 600;
-      text-shadow: 0 0 1px rgba(176,176,176,0.7);
-    }
-    .nav-links {
-      display: flex;
-      gap: 1.5rem;
-    }
+    .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
+    .nav-links { display: flex; gap: 1.5rem; }
     .nav-links a {
       color: var(--color-text);
-      padding: 0.3rem 0.8rem;
+      padding: 0.2rem 1rem;
       font-weight: 600;
       font-size: 1.2rem;
       text-decoration: none;
       transition: background-color 0.25s ease;
-      text-shadow: 0 0 1px var(--color-white);
       border-radius: var(--border-radius);
     }
-    .nav-links a:hover { background-color: rgba(157,206,233,0.2); }
     .nav-links a.active { background-color: var(--highlight-bg); }
-    main {
-      padding-bottom: 1rem;
-    }
-    .section-title {
-      font-size: 1.7rem;
-      font-weight: 800;
-      margin: 0 0 0.5rem;
-      text-shadow: 0 0 1px var(--color-white);
-      text-align: left;
-    }
-    .card {
-      background: var(--color-white);
-      padding: 1.5rem;
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1.5rem 0;
-    }
-    .gallery-item {
-      text-align: center;
-    }
-    .gallery-item img {
-      width: 100%; height: auto;
-      object-fit: contain;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .project-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin: 0.5rem 0 0;
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.85rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font: inherit;
-    }
-    button {
-      background: var(--color-primary-mid);
-      color: var(--color-white);
-      padding: 0.85rem;
-      border: none;
-      font-weight: 700;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    footer.footer {
-      text-align: center;
-      padding: 0.5rem;
-      background: var(--color-white);
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1rem 0;
-      font-size: 0.9rem;
-      font-weight: 600;
-      text-shadow: 0 0 1px var(--color-white);
-    }
-    @media (max-width: 600px) {
-      .nav-links a { font-size: 1rem; padding: 0.2rem 0.8rem; }
-      .section-title { font-size: 1.5rem; }
-    }
+    main { padding-bottom: 1rem; }
+    .section-title { font-size: 1.7rem; font-weight: 800; margin: 0 0 0.5rem; text-shadow: 0 0 1px var(--color-white); text-align: left; }
+    .card { background: var(--color-white); padding: 1.5rem; border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1.5rem 0; }
+    .gallery-item { text-align: center; }
+    .gallery-item img { width: 100%; height: auto; object-fit: contain; border-radius: 8px; cursor: pointer; }
+    .project-title { font-size: 1rem; font-weight: 600; margin: 0.5rem 0 0; text-align: center; }
+    form { display: flex; flex-direction: column; gap: 1rem; }
+    input, textarea { padding: 0.85rem; border: 1px solid #ccc; border-radius: 8px; font: inherit; }
+    button { background: var(--color-primary-mid); color: var(--color-white); padding: 0.85rem; border: none; font-weight: 700; border-radius: 8px; cursor: pointer; }
+    footer.footer { text-align: center; padding: 0.5rem; background: var(--color-white); border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1rem 0; font-size: 0.9rem; font-weight: 600; text-shadow: 0 0 1px var(--color-white); }
   </style>
 </head>
 <body>
@@ -173,13 +105,7 @@
     const navLinks = document.querySelectorAll('.nav-link');
     const sections = document.querySelectorAll('section');
     function setActiveLink(id) { navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href')===`#${id}`)); }
-    function updateActiveSection() {
-      let current='';
-      sections.forEach(sec=>{
-        if(window.pageYOffset>=sec.offsetTop-nav.offsetHeight) current=sec.id;
-      });
-      if(current) setActiveLink(current);
-    }
+    function updateActiveSection() { let current=''; sections.forEach(sec=>{ if(window.pageYOffset>=sec.offsetTop-nav.offsetHeight) current=sec.id; }); if(current) setActiveLink(current); }
     window.addEventListener('scroll',updateActiveSection);
     updateActiveSection();
   </script>
