--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v7)</title>
+  <title>Michael Schimkus - Portfolio (v8)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -36,7 +36,7 @@
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       padding: 0.5rem 0;
       margin: 1rem 0;
-      gap: 0.5rem;
+      gap: 1rem; /* increased space between title and links for v8 */
     }
     .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
     .nav-links { display: flex; gap: 1.5rem; }
@@ -98,7 +98,7 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v7
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v8
     </footer>
   </div>
   <script>
