--- a/index.html
+++ b/index.html
@@ -1,93 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v10)<\/title>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Michael Schimkus - Portfolio (v11)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --color-primary-light: #f6fcff;
-      --color-white:        #ffffff;
-      --color-text:         #222222;
-      --highlight-bg:       rgba(0,123,255,0.5);
-      --border-radius:      10px;
-      --max-width:          1200px;
+      --color-bg-light:   #f6fcff;
+      --color-bg-nav:     #cbeaf9;
+      --color-text:       #222222;
+      --color-highlight:  rgba(0,123,255,0.5);
+      --radius:           10px;
+      --max-width:        1200px;
     }
-    *, *::before, *::after {
-      box-sizing: border-box;
-      margin: 0; padding: 0;
-    }
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Public Sans', sans-serif;
-      background: var(--color-primary-light);
+      background: var(--color-bg-light);
       color: var(--color-text);
       line-height: 1.6;
       scroll-behavior: smooth;
     }
-    .container { max-width: var(--max-width); margin: 0 auto; padding: 0 1rem; }
-    /* Nav restored to stacked layout */
+    .container {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+    /* Navigation */
     nav {
+      background: var(--color-bg-nav);
+      border-radius: var(--radius);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      margin: 1rem 0;
+      padding: 0.5rem 1rem;
+    }
+    .nav-inner {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: var(--color-primary-mid); /* light blue nav background */
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      padding: 0.5rem 0;
-      margin: 1rem 0;
-      gap: 2rem; /* increased space between title and links for v9 */ /* increased space between title and links for v8 */
+      gap: 2rem;
     }
-    .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
-    .nav-links { display: flex; gap: 1.5rem; }
+    .nav-inner > h1 {
+      font-size: 2.2rem;
+      font-weight: 600;
+      color: var(--color-text);
+    }
+    .nav-links {
+      display: flex;
+      gap: 1.5rem;
+    }
     .nav-links a {
       color: var(--color-text);
-      padding: 0.2rem 1rem;
-      font-weight: 600;
+      padding: 0.3rem 0.8rem;
       font-size: 1.2rem;
+      font-weight: 600;
       text-decoration: none;
-      transition: background-color 0.25s ease;
-      border-radius: var(--border-radius);
+      border-radius: var(--radius);
+      transition: background-color 0.25s;
     }
-    .nav-links a.active { background-color: var(--highlight-bg); }
-    main { padding-bottom: 1rem; }
-    .section-title { font-size: 1.7rem; font-weight: 800; margin: 0 0 0.5rem; text-shadow: 0 0 1px var(--color-white); text-align: left; }
-    .card { background: var(--color-white); padding: 1.5rem; border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1.5rem 0; }
-    .gallery-item { text-align: center; }
-    .gallery-item img { width: 100%; height: auto; object-fit: contain; border-radius: 8px; cursor: pointer; }
-    .project-title { font-size: 1rem; font-weight: 600; margin: 0.5rem 0 0; text-align: center; }
-    form { display: flex; flex-direction: column; gap: 1rem; }
-    input, textarea { padding: 0.85rem; border: 1px solid #ccc; border-radius: 8px; font: inherit; }
-    button { background: var(--color-primary-mid); color: var(--color-white); padding: 0.85rem; border: none; font-weight: 700; border-radius: 8px; cursor: pointer; }
-    footer.footer { text-align: center; padding: 0.5rem; background: var(--color-white); border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1rem 0; font-size: 0.9rem; font-weight: 600; text-shadow: 0 0 1px var(--color-white); }
+    .nav-links a:hover,
+    .nav-links a.active { background: var(--color-highlight); }
+    /* Main content */
+    .card {
+      background: #fff;
+      border-radius: var(--radius);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      margin: 1.5rem 0;
+      padding: 1.5rem;
+    }
+    .card h2 {
+      font-size: 1.7rem;
+      font-weight: 800;
+      margin-bottom: 0.5rem;
+      text-align: left;
+    }
+    .gallery-item {
+      text-align: center;
+    }
+    .gallery-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .project-title {
+      font-size: 1rem;
+      font-weight: 600;
+      margin-top: 0.5rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 0.85rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font: inherit;
+    }
+    button {
+      background: var(--color-bg-nav);
+      color: #fff;
+      padding: 0.85rem;
+      border: none;
+      font-weight: 700;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    footer {
+      text-align: center;
+      margin: 1rem 0;
+      font-size: 0.9rem;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <nav id="site-nav">
-      <div class="nav-title">Michael Schimkus</div>
+  <nav>
+    <div class="nav-inner container">
+      <h1>Michael Schimkus</h1>
       <div class="nav-links">
         <a href="#about" class="nav-link">About</a>
         <a href="#portfolio" class="nav-link">Portfolio</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
   <main class="container">
     <section id="about" class="card">
-      <h2 class="section-title">About</h2>
-      <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be. It gives visitors a brief introduction.</p>
-      <p>This is a second sample paragraph for demonstration purposes. You might include hobbies, your work ethic, or what makes you unique.</p>
+      <h2>About</h2>
+      <p>This is a sample paragraph for the About section. It describes who you are and what you do.</p>
+      <p>This is a second sample paragraph for demonstration purposes.</p>
     </section>
     <section id="portfolio" class="card">
-      <h2 class="section-title">Portfolio</h2>
+      <h2>Portfolio</h2>
       <div class="gallery-item">
         <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
         <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
       </div>
     </section>
     <section id="contact" class="card">
-      <h2 class="section-title">Contact</h2>
+      <h2>Contact</h2>
       <form>
         <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Your Email" required />
@@ -96,18 +151,20 @@
       </form>
     </section>
   </main>
-  <div class="container">
-    <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v10
-    </footer>
-  </div>
+  <footer class="container">
+    &copy; 2025 Michael Schimkus | <a href="#" style="color:var(--color-text);">Return to top</a> | v11
+  </footer>
   <script>
-    const navLinks = document.querySelectorAll('.nav-link');
+    const links = document.querySelectorAll('.nav-link');
     const sections = document.querySelectorAll('section');
-    function setActiveLink(id) { navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href')===`#${id}`)); }
-    function updateActiveSection() { let current=''; sections.forEach(sec=>{ if(window.pageYOffset>=sec.offsetTop-nav.offsetHeight) current=sec.id; }); if(current) setActiveLink(current); }
-    window.addEventListener('scroll',updateActiveSection);
-    updateActiveSection();
+    function setActive(id) {
+      links.forEach(l => l.classList.toggle('active', l.getAttribute('href') === `#${id}`));
+    }
+    window.addEventListener('scroll', () => {
+      let current = '';
+      sections.forEach(sec => { if (pageYOffset >= sec.offsetTop - 60) current = sec.id; });
+      if (current) setActive(current);
+    });
   </script>
 </body>
 </html>
