--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v13)</title>
+  <title>Michael Schimkus - Portfolio (v14)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -27,8 +27,8 @@
       margin:0 auto;
       padding:0 1rem;
     }
+    /* Navigation */
     nav {
-      background:var(--nav-bg);
       box-shadow:0 4px 16px rgba(0,0,0,0.1);
       margin:1rem 0;
     }
@@ -61,7 +61,8 @@
     }
     .nav-links a:hover,
     .nav-links a.active { background:var(--highlight); }
-    main .card {
+    /* Main content */
+    .card {
       background:#fff;
       border-radius:var(--radius);
       box-shadow:0 4px 16px rgba(0,0,0,0.1);
@@ -150,7 +151,7 @@
     </section>
   </main>
   <footer class="container">
-    &copy; 2025 Michael Schimkus | <a href="#">Return to top</a> | v13
+    &copy; 2025 Michael Schimkus | <a href="#">Return to top</a> | v14
   </footer>
   <script>
     const links = document.querySelectorAll('.nav-link');
