--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v1)</title>
+  <title>Michael Schimkus - Portfolio (v2)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -38,7 +38,7 @@
       margin: 1rem 0;
       gap: 0.5rem;
     }
-    .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
+    .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); margin-bottom: 2rem; }
     .nav-links { display: flex; gap: 1.5rem; }
     .nav-links a {
       color: var(--color-text);
@@ -98,7 +98,7 @@
   </main>
   <div class="container">
     <footer class="footer">
-      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v1
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v2
     </footer>
   </div>
   <script>
